frontend/src/index.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

body{
  background-color: darkgray;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  margin: 0px;
  min-height: 100vh;
}

#root{
  display: flex;
  flex-direction: column;
  margin-bottom: 10px;
}

footer{
  align-items: center;
  background-color: black;
  border-top: solid black;
  display: grid;
  grid-template-columns: 1fr auto 1fr;
  margin-top: auto;
  padding: 5px 20px;
  text-align: center;
}

.socials-box{
  display: flex;
  column-gap: 15px;
}

.last-item{
  justify-self: flex-end;
}

.footer-text{
  color: white;
  font-family:Verdana, Geneva, Tahoma, sans-serif;
  font-size: 18px;
  text-shadow: 1px 1px 2px pink;
}

